feat: make CORS allowed origins configurable via env var
Needed to allow the Vercel-hosted frontend to call the Railway-hosted
backend API without hardcoding localhost as the only allowed origin.

Co-authored-by: Cursor <cursoragent@cursor.com>